# runtime

./: .gitignore  CMakeLists.txt  demo.cc
include/engines/: engine.h  engine_builder.h  engine_config.h  engine_validation.h  onnx_engine.h  onnx_utils.h  tensorrt_utils.h  trt_engine.h
include/operators/: add_batch_dim.h  bgr_to_rgb.h  cast_float32_to_uint8.h  cast_uint8_to_float32.h  center_crop.h  chw_to_hwc.h  hwc_to_chw.h  normalization_params.h  normalize.h  pad_to_size.h  preprocessor.h  rgb_to_bgr.h  rgb_to_gray.h  transforms.h
include/runtime/components/: component_interface.h  counter.h  frame_debugger.h  heartbeat.h  synthetic_camera.h
include/runtime/core/: pipeline.h  port.h  runtime_context.h  scheduler.h  status.h  types.h
include/runtime/data/: buffer.h  frame.h  tensor.h  tensor_helpers.h
include/runtime/preprocess/: preprocessor.h  transforms.h
include/sensors/: camera_interface.h  mac_camera.h
include/tasks/: segmentation_contract.h
src/apps/: demo.cc
src/core/: pipeline.cc
src/engines/: engine_builder.cc  onnx_engine.cc
src/operators/: add_batch_dim.cc  bgr_to_rgb.cc  cast_float32_to_uint8.cc  cast_uint8_to_float32.cc  center_crop.cc  chw_to_hwc.cc  hwc_to_chw.cc  normalize.cc  pad_to_size.cc  preprocessor.cc  rgb_to_bgr.cc  rgb_to_gray.cc
src/runtime/components/: counter.cc  frame_debugger.cc  heartbeat.cc  synthetic_camera.cc
src/runtime/core/: pipeline.cc  runtime_context.cc  scheduler.cc
src/runtime/preprocess/: preprocessor.cc  transforms.cc
src/sensors/: mac_camera.cc
src/tasks/: detection_contract.cc  segmentation_contract.cc
stb/: stb_image.h  stb_image_write.h
